SDKs/twilio.com/twilio_taskrouter_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateActivityRequest req = new CreateActivityRequest() {{
                security = new CreateActivitySecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new CreateActivityPathParams() {{
                    workspaceSid = "totam";
                }};
                request = new CreateActivityCreateActivityRequest() {{
                    available = false;
                    friendlyName = "blanditiis";
                }};
            }};

            CreateActivityResponse res = sdk.createActivity(req);

            if (res.taskrouterV1WorkspaceActivity.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createActivity`
* `createTask`
* `createTaskChannel`
* `createTaskQueue`
* `createWorker`
* `createWorkflow`
* `createWorkspace`
* `deleteActivity`
* `deleteTask`
* `deleteTaskChannel`
* `deleteTaskQueue`
* `deleteWorker`
* `deleteWorkflow`
* `deleteWorkspace`
* `fetchActivity`
* `fetchEvent`
* `fetchTask`
* `fetchTaskChannel`
* `fetchTaskQueue`
* `fetchTaskQueueCumulativeStatistics`
* `fetchTaskQueueRealTimeStatistics`
* `fetchTaskQueueStatistics`
* `fetchTaskReservation`
* `fetchWorker`
* `fetchWorkerChannel`
* `fetchWorkerInstanceStatistics`
* `fetchWorkerReservation`
* `fetchWorkerStatistics`
* `fetchWorkersCumulativeStatistics`
* `fetchWorkersRealTimeStatistics`
* `fetchWorkflow`
* `fetchWorkflowCumulativeStatistics`
* `fetchWorkflowRealTimeStatistics`
* `fetchWorkflowStatistics`
* `fetchWorkspace`
* `fetchWorkspaceCumulativeStatistics`
* `fetchWorkspaceRealTimeStatistics`
* `fetchWorkspaceStatistics`
* `listActivity`
* `listEvent`
* `listTask`
* `listTaskChannel`
* `listTaskQueue`
* `listTaskQueuesStatistics`
* `listTaskReservation`
* `listWorker`
* `listWorkerChannel`
* `listWorkerReservation`
* `listWorkflow`
* `listWorkspace`
* `updateActivity`
* `updateTask`
* `updateTaskChannel`
* `updateTaskQueue`
* `updateTaskReservation`
* `updateWorker`
* `updateWorkerChannel`
* `updateWorkerReservation`
* `updateWorkflow`
* `updateWorkspace`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
